--- a/public/css/site.css
+++ b/public/css/site.css
@@ -478,10 +478,18 @@ body{
         }
 
         .posts > li .create-post-comment-form .input-comment{
-            max-width: 280px;
+            max-width: 200px;
         }
 
         .create-post-form .input-content{
-            max-width: 245px;
+            max-width: 200px;
+        }
+
+        .login .header, .register .header{
+            font-size: 12px;
+        }
+
+        .login button, .register button{
+            max-width: 240px;
         }
     }
